// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HtmlFragments.vue > Renders nothing 1`] = ``;

exports[`HtmlFragments.vue > Renders one element 1`] = `
<div>
  Text
</div>
`;

exports[`HtmlFragments.vue > Renders one element with children 1`] = `
<div class="box">
  <span>
    Text1
  </span>
  <span>
    Text2
  </span>
</div>
`;

exports[`HtmlFragments.vue > Renders one text node 1`] = `Some Text`;

exports[`HtmlFragments.vue > Renders two root elements 1`] = `
<div>
  Text
</div>
<p>
  Paragraph
</p>
`;
